# Mentis

./: .env.example  .gitignore  Makefile  README.md  app.py  packages.txt  pyproject.toml  requirements.txt  skills-lock.json
docs/: architecture.py
docs/superpowers/plans/: 2026-05-11-mentis-poc.md
docs/superpowers/specs/: 2026-05-11-mentis-poc-design.md
mentis/: __init__.py  cache.py  cli.py  llm.py  observability.py  orchestrator.py  pdf.py  polish.py  prompts.py  query_planner.py  report.py  schemas.py  synthesizer.py
mentis/retrievers/: __init__.py  openfda.py  pubmed.py  rxnav.py  tavily.py  wikipedia.py
mentis/templates/: report.html.j2
prompts/: executive_summary.v1.j2  query_planner.v1.j2  report_polisher.v1.j2  safety_reframe.v1.j2  section_polisher.v1.j2  section_synthesizer.v1.j2
scripts/: sync_prompts.py
tests/: conftest.py  test_app.py  test_cache.py  test_cli.py  test_llm.py  test_observability.py  test_orchestrator.py  test_pdf.py  test_prompts.py  test_query_planner.py  test_report.py  test_retriever_openfda.py  test_retriever_pubmed.py  test_retriever_rxnav.py  test_retriever_tavily.py  test_retriever_wikipedia.py  test_schemas.py  test_synthesizer.py
tests/fixtures/openfda/: label_response.json
tests/fixtures/pubmed/: efetch_response.xml  esearch_response.json
walkthrough/sample_reports/: insulin_glargine.md  minoxidil.md  minoxidil_polished.md  saline_0.9pct.md  tramadol.md
