[project]
name = "mentis"
version = "0.1.0"
description = "Procurement intelligence reports for medical substances"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ansumanbhujabal", email = "ansumanbhujabal1@gmail.com" }
]
dependencies = [
    "pydantic>=2.6",
    "litellm>=1.40",
    "httpx>=0.27",
    "tavily-python>=0.5",
    "markdown-it-py>=3.0",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "click>=8.1",
    "gradio>=4.40",
    "langfuse>=2.40,<3",
    "python-dotenv>=1.0",
    "linkify-it-py>=2.0",
]

[project.scripts]
mentis = "mentis.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "diagrams>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
